--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
 <div class="bottom-container">
-  <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+  <a class="footer-link" href="https://pl.linkedin.com/in/katarzyna-k%C4%85dziela-bb838815a">LinkedIn</a>
   <p class="kk">© 2022 Katarzyna Kądziela.</p>
 </div>
 
