--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h2>Get In Touch</h2>
       <h3>Do you want to know more?</h3>
     <p>If you are curious about my coding experience or you just want to find some new recipe.</p>
-    <a class="btn" href="mailto:kasiakadziela7@gmail.com">CONTACT ME</a>
+    <a class="btn" href="mailto:xxx@gmail.com">CONTACT ME</a>
   </div>
 </div>
 
