--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="skill-row">
       <img class="python-img" src="images/python.png" alt="python-img">
       <h3>Python</h3>
-      <p class="skill-description">I started learning programming for real in 2021, because I wanted to work in IT. Over time, I gained experience through several courses but I still improving my skills.</p>
+      <p class="skill-description">I started learning programming for real in 2021, because I wanted to work in IT. Over time, I gained experience through several courses but I'm still improving my skills.</p>
     </div>
     <div class="skill-row">
       <img class="testing-jpg" src="images/testing.png" alt="testing-jpg">
